新增两个动画效果，弹跳，弹性过度

--- a/components/suspension.html
+++ b/components/suspension.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>悬浮modules</title>
+		<title>悬浮modules-回到顶部</title>
 	</head>
 	<style type="text/css">
 		/*跟往常一样简单的设置样式*/
