--- a/components/tabber.html
+++ b/components/tabber.html
@@ -33,6 +33,14 @@
 				</article>
 			</div>
 		</section>
+		<script src="../vendor/jquery-2.1.0.js"></script>
+		<script type="text/javascript">
+			;(function($){
+				$.fn.tab=function(){
+					
+				}
+			})(jQuery);
+		</script>
 		<script type="text/javascript">
 			var nav_weather=document.getElementById("nav-weather");
 			var nav_sport=document.getElementById("nav-sport");
