--- a/components/tabscroll.html
+++ b/components/tabscroll.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -54,7 +54,7 @@
 
 		});
 
-swiperWidth = mySwiper.container[0].clientWidth
+swiperWidth = mySwiper.container[0].clientWidth;
 maxTranslate = mySwiper.maxTranslate();
 maxWidth = -maxTranslate + swiperWidth / 2
 
